--- a/wc01.tex
+++ b/wc01.tex
@@ -19,7 +19,7 @@
 % \printanswers %Uncomment this line
 
 \title{Weekly Challenge 01: \LaTeX\; practice and introduction to logic}
-\author{Blingblong} % <=== replace with your student ID, e.g. xy012345
+\author{Blingblogng} % <=== replace with your student ID, e.g. xy012345
 \date{CS/MATH 113 Discrete Mathematics\\Habib University\\Spring 2025}
 
 \qformat{{\large\bf \thequestion. \thequestiontitle}\hfill}
@@ -32,7 +32,7 @@
   
 \titledquestion{Everythings on the table} Draw the truth table of the implication operator.
 \begin{solution}
-    % Add your solution here
+    abbas ali
 \end{solution}
 
 \titledquestion{Triangles!} Write the Pythagorean theorem.
