--- a/wc01.tex
+++ b/wc01.tex
@@ -19,7 +19,7 @@
 % \printanswers %Uncomment this line
 
 \title{Weekly Challenge 01: \LaTeX\; practice and introduction to logic}
-\author{Blingblogng} % <=== replace with your student ID, e.g. xy012345
+\author{liberal} % <=== replace with your student ID, e.g. xy012345
 \date{CS/MATH 113 Discrete Mathematics\\Habib University\\Spring 2025}
 
 \qformat{{\large\bf \thequestion. \thequestiontitle}\hfill}
